--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -10,10 +10,18 @@ import ListBlog from '../components/ListBlog.astro'
         <center class={css({mb: '6%'})}>
             <p class={css({fontWeight:'bold',
                         color: 'white',
-                        mt: '1.2%'})}>
+                        mt: '1.2%',
+                        })}>
                 Dar_rius
             </p>
-            <p class={css({color: '#ECF0F1', mt:'1.2%', mb:'1.5%'})}>
+            <p class={css({color: '#ECF0F1', 
+                mt:'1.2%',
+                mb:'1.5%', 
+                sms:{
+                    fontSize:'15', 
+                },
+                ssms:{fontSize:'14', mb:'4%'}
+                })}>
             I'm a software engineer and I'd like to <br/> share my latest discoveries with you.
             </p>
             <div class={
