--- a/apps/web/src/components/Header.astro
+++ b/apps/web/src/components/Header.astro
@@ -6,7 +6,7 @@ import {css} from "../../styled-system/css"
 ---
 
 <header className={center()}>
-    <a href="/" class={css({pt:'2%'})}>
+    <a href="/" class={css({mt:'2%', sms:{mt: '5%'}, ssms:{mt:'10%'}})}>
         <Image src={profil} 
             alt="Hey"
             class={css({w: 85})}
