--- a/apps/web/src/pages/blog/[id].astro
+++ b/apps/web/src/pages/blog/[id].astro
@@ -14,10 +14,20 @@ const response = await fetch(`http://localhost:3333/blog/${id}`)
 
 <Layout>
     <div class={css({textAlign:'center', color:'white'})}>
-    <h1 class={css({fontSize:40, fontWeight:600, mt:10, mb: 5, px:'31%'})}>
+    <h1 class={css({fontSize:40,
+        fontWeight:600,
+        mt:10,
+        mb: 5,
+        fontSize:{base:'30', sm:'33', md:'36'}
+        })}>
         {response.title}
     </h1>
-    <p class={css({fontSize:14, px:'31%'})}>
+    <p class={css({
+        sms:{fontSize:'14'},
+        px:{ssms:'2%' ,sms:'7%', base:'20%', xl:'31%'},
+        xl:{fontSize:'16'},
+        ssms:{fontSize:'12'}
+        })}>
         {response.preface}
     </p>
     </div>
