--- a/apps/web/src/components/Header.astro
+++ b/apps/web/src/components/Header.astro
@@ -9,7 +9,7 @@ import {css} from "../../styled-system/css"
     <a href="/" class={css({mt:'2%', sms:{mt: '5%'}, ssms:{mt:'10%'}})}>
         <Image src={profil} 
             alt="Hey"
-            class={css({w: 85})}
+            class={css({w:{sms:'83', base:'75'}})}
         />
     </a>
 <header />
