--- a/apps/web/src/components/Last.astro
+++ b/apps/web/src/components/Last.astro
@@ -10,7 +10,7 @@ import {css} from '../../styled-system/css'
                 ml: 'auto',
                 mr: 'auto',
                 bottom: 1})}>
-    <p class={css({color:'#839192'})}>
+    <p class={css({color:'#839192', fontSize:{base:13, sm: 15}})}>
         Designed and coded by Dar_rius
     </p>
 </div>
