--- a/apps/web/src/components/Footer.astro
+++ b/apps/web/src/components/Footer.astro
@@ -5,7 +5,7 @@ import {flex} from '../../styled-system/patterns'
 
 <footer class={flex({direction: 'row', 
                     justifyContent: 'center',
-                    my: '8%',
+                    my: {base:'14%', sm:'8%'},
                     mx: '-12%'
                 })}>
     <div class={css({textAlign:'center', px:'4%'})}>
