--- a/apps/web/src/pages/blog/[id].astro
+++ b/apps/web/src/pages/blog/[id].astro
@@ -26,7 +26,8 @@ const response = await fetch(`http://localhost:3333/blog/${id}`)
         sms:{fontSize:'14'},
         px:{ssms:'2%' ,sms:'7%', base:'20%', xl:'31%'},
         xl:{fontSize:'16'},
-        ssms:{fontSize:'12'}
+        ssms:{fontSize:'12'},
+        color: '#DBDDDE'
         })}>
         {response.preface}
     </p>
