last last commit

--- a/apps/web/src/components/admin/AdminHeader.astro
+++ b/apps/web/src/components/admin/AdminHeader.astro
@@ -16,6 +16,7 @@ const linkStyle = css({
         mb: 17
         })}>
     <a href="/" class={linkStyle}>Home</a>
+    <a href="/admin/create" class={linkStyle}>Create blog</a>
     <a href="/admin/auth/signup" class={linkStyle}>New account</a>
     <a href="/admin/edit" class={linkStyle}>Edit</a>
 </header>
