--- a/apps/web/src/pages/admin/auth/signin.astro
+++ b/apps/web/src/pages/admin/auth/signin.astro
@@ -3,6 +3,14 @@ import Layout from '../../../layouts/Layout.astro'
 import SigninComponent from '../../../components/admin/Signin.tsx'
 ---
 
+<script >
+    import {isLogged} from '../../../utils.ts'
+    const token = sessionStorage.getItem('token')
+    if (isLogged(token)){
+        window.location = "http://localhost:4321/admin/edit"
+    }
+</script>
+
 <Layout>
     <SigninComponent client:load/>
 </Layout>
