--- a/apps/web/src/pages/admin/auth/signup.astro
+++ b/apps/web/src/pages/admin/auth/signup.astro
@@ -2,6 +2,16 @@
 import Layout from '../../../layouts/Layout.astro'
 import SignupComponent from '../../../components/admin/Signup.tsx'
 ---
+
+<script >
+    import {isLogged} from '../../../utils.ts'
+    const token = sessionStorage.getItem('token')
+    if (!isLogged(token)){
+        console.log('test')
+        window.location = "http://localhost:4321/admin/auth/signin"
+    }
+</script>
+
 <Layout>
     <SignupComponent client:load />
 </Layout>
