--- a/apps/web/src/pages/admin/edit/index.astro
+++ b/apps/web/src/pages/admin/edit/index.astro
@@ -14,6 +14,15 @@ const styleLabel = css({
         })
 ---
 
+<script>
+    import {isLogged} from '../../../utils.ts'
+    const token = sessionStorage.getItem('token')
+    console.log(token)
+    if (!isLogged(token)){
+        window.location = "http://localhost:4321/admin/auth/signin"
+    }
+</script>
+
 <AdminLayout>
     <center>
     <h2 class={css({
