--- a/apps/web/src/pages/admin/auth/signup.astro
+++ b/apps/web/src/pages/admin/auth/signup.astro
@@ -4,11 +4,10 @@ import SignupComponent from '../../../components/admin/Signup.tsx'
 ---
 
 <script >
-    import {isLogged} from '../../../utils.ts'
+    import {isLogged, url} from '../../../utils.ts'
     const token = sessionStorage.getItem('token')
     if (!isLogged(token)){
-        console.log('test')
-        window.location = "http://localhost:4321/admin/auth/signin"
+        window.location = `${url}/admin/auth/signin`
     }
 </script>
 
