--- a/apps/web/src/pages/admin/edit/[id].astro
+++ b/apps/web/src/pages/admin/edit/[id].astro
@@ -5,9 +5,17 @@ import AdminLayout from '../../../layouts/AdminLayout.astro'
 import EditFirst from '../../../components/admin/EditFirst.tsx'
 
 export const prerender = false
-
 const {id} = Astro.params
+
 ---
+
+<script >
+    import {isLogged} from '../../../utils.ts'
+    const token = sessionStorage.getItem('token')
+    if (!isLogged(token)){
+        window.location = `${url}/admin/auth/signin`
+    }
+</script>
 
 <AdminLayout>
     <center>
