--- a/apps/web/src/pages/admin/edit/index.astro
+++ b/apps/web/src/pages/admin/edit/index.astro
@@ -19,7 +19,7 @@ const styleLabel = css({
     const token = sessionStorage.getItem('token')
     console.log(token)
     if (!isLogged(token)){
-        window.location = "http://localhost:4321/admin/auth/signin"
+        window.location = `${url}/admin/auth/signin`
     }
 </script>
 
