--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -29,36 +29,39 @@ import ListBlog from '../components/ListBlog.astro'
                 justify:'center'})}>
                 <a href="https://github.com/Dar-rius" target="_blank" 
                 class={css({color:'#B0B0B0',
-                mr: '5%', 
-                transition: 'all',
-                transitionTimingFunction: 'ease-out',
-                transitionDelay: '.2s',
-                _hover:{
-                    color: 'white'
-                }   
+                    mr: '5%', 
+                    ssmsOnly: {fontSize: '14.5'},
+                    transition: 'all',
+                    transitionTimingFunction: 'ease-out',
+                    transitionDelay: '.2s',
+                    _hover:{
+                        color: 'white'
+                    }   
                 })}>
                     Github
                 </a>
                 <a href="https://www.linkedin.com/in/mohamed-tine-515950214/" target="_blank" 
                 class={css({color:'#B0B0B0',
-                transition: 'all',
-                transitionTimingFunction: 'ease-out',
-                transitionDelay: '.2s',
-                _hover:{
-                    color: 'white'
-                }
+                    transition: 'all',
+                    ssmsOnly: {fontSize: '14.5'},
+                    transitionTimingFunction: 'ease-out',
+                    transitionDelay: '.2s',
+                    _hover:{
+                        color: 'white'
+                    }
                 })}>
                     Linkedin
                 </a>
                 <a href="https://twitter.com/Dar_rius_" target="_blank" 
                 class={css({color:'#B0B0B0',
-                            ml: '5%',
-                            transition: 'all',
-                            transitionTimingFunction: 'ease-out',
-                            transitionDelay: '.2s',
-                            _hover:{
-                                color: 'white'
-                            }})}>
+                    ml: '5%',
+                    transition: 'all',
+                    ssmsOnly: {fontSize: '14.5'},
+                    transitionTimingFunction: 'ease-out',
+                    transitionDelay: '.2s',
+                    _hover:{
+                        color: 'white'
+                    }})}>
                     Twitter
                 </a>
             </div>
