--- a/apps/web/src/components/Content.astro
+++ b/apps/web/src/components/Content.astro
@@ -43,7 +43,8 @@ const styleMD = css({ color:'white',
                         color: '#DBDDDE',
                     },
                     '& p':{
-                        color: '#CACED2'
+                        color: '#CACED2',
+                        fontSize: '16.5',
                     }
                     })
 ---
