--- a/apps/web/src/layouts/Layout.astro
+++ b/apps/web/src/layouts/Layout.astro
@@ -12,7 +12,7 @@ import "../index.css"
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<title>test</title>
+		<title>Blog</title>
 	</head>
 	<body class={css({mx:'8%'})}>
         <Header/>
