--- a/apps/web/src/pages/blog/[id].astro
+++ b/apps/web/src/pages/blog/[id].astro
@@ -25,7 +25,7 @@ const response = await fetch(`http://localhost:3333/blog/${id}`)
     </h1>
     <p class={css({
         sms:{fontSize:'14'},
-        px:{ssms:'2%' ,sms:'7%', base:'20%', xl:'31%'},
+        px:{ssms:'2%' ,sms:'7%', md:'16%', base:'20%', xl:'31%'},
         xl:{fontSize:'16'},
         ssms:{fontSize:'12'},
         color: '#DBDDDE'
